--- a/site/css/php-style.css
+++ b/site/css/php-style.css
@@ -430,8 +430,8 @@ hr {
 }
 
 code, pre, tt {
-    font-family: "andale mono", "monotype.com", "courier new", courier, monospace;
-    font-size: 0.9em;
+    font-family: monospace;
+    font-size: medium;
 }
 
 h1 {
